--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 certifi==2020.12.5
-click==7.1.2
-fastapi==0.63.0
-gunicorn==20.1.0
-h11==0.12.0
+click==7.1.1
+fastapi==0.52.0
+gunicorn==20.0.4
+h11==0.9.0
 joblib==1.0.1
-numpy==1.20.2
-pydantic==1.8.1
+numpy==1.18.2
+pydantic==1.4
 python-multipart==0.0.5
-scikit-learn==0.24.2
-scipy==1.6.3
+scikit-learn==0.21.3
+scipy==1.4.1
 six==1.16.0
 sklearn==0.0
-starlette==0.13.6
+starlette==0.13.2
 threadpoolctl==2.1.0
 typing-extensions==3.10.0.0
-uvicorn==0.13.4
+uvicorn==0.11.3
+websockets==8.1
 wincertstore==0.2
